# gt.ml

./: .gitignore  Makefile  README.md  dune-project  gt.opam
.github/workflows/: analysis.yaml
lib/: ast.ml  commit_runtime.ml  common.ml  dune  git_foo.ml  gt_stdlib.ml  interpreter.ml  lexer.mll  main.ml  parser.mly  runtime.ml
test/: dune  test_gt.ml
